# bhash-android

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/bhash/database/: DatabaseTests.java
app/src/androidTest/java/com/bhash/platform/: KVStoreTests.java  PlatformTests.java
app/src/androidTest/java/com/bhash/presenter/: ScanResultTest.java
app/src/androidTest/java/com/bhash/screenshots/: JUnit4StyleTests.java
app/src/androidTest/java/com/bhash/security/: KeyStoreTests.java  NewKeyStoreTests.java
app/src/androidTest/java/com/bhash/wallet/: WalletTests.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bhash/: BreadApp.java
app/src/main/java/com/bhash/presenter/activities/: CurrencySettingsActivity.java  DisabledActivity.java  HomeActivity.java  InputWordsActivity.java  LoginActivity.java  PaperKeyActivity.java  PaperKeyProveActivity.java  ReEnterPinActivity.java  SetPinActivity.java  UpdatePinActivity.java  WalletActivity.java
app/src/main/java/com/bhash/presenter/customviews/: AutoResizeTextView.java  BRButton.java  BRDialogView.java  BREdit.java  BRKeyboard.java  BRLinearLayoutWithCaret.java  BRLockScreenConstraintLayout.java  BRNotificationBar.java  BRRelativeLayout.java  BRSearchBar.java  BRText.java  BRToast.java
app/src/main/java/com/bhash/presenter/entities/: BRMenuItem.java  BRMerkleBlockEntity.java  BRPeerEntity.java  BRSecurityCenterItem.java  BRSettingsItem.java  BRTransactionEntity.java  BlockEntity.java  CryptoRequest.java  CurrencyEntity.java  PaymentItem.java  PaymentRequestWrapper.java  PeerEntity.java  TxUiHolder.java
app/src/main/java/com/bhash/presenter/fragments/: FragmentFingerprint.java  FragmentGreetings.java  FragmentManage.java  FragmentMenu.java  FragmentPhraseWord.java  FragmentPin.java  FragmentReceive.java  FragmentRequestAmount.java  FragmentSend.java  FragmentSignal.java  FragmentSupport.java  FragmentTxDetails.java
app/src/main/java/com/bhash/presenter/interfaces/: BRAuthCompletion.java  BROnSignalCompletion.java  BreadPayment.java
app/src/main/java/com/bhash/tools/adapter/: CurAdapter.java  TransactionListAdapter.java  WalletListAdapter.java
app/src/main/java/com/bhash/tools/animation/: BRAnimator.java  BRDialog.java  DecelerateOvershootInterpolator.java  SlideDetector.java  SpringAnimator.java
app/src/main/java/com/bhash/tools/crypto/: Base58.java  CryptoHelper.java
app/src/main/java/com/bhash/tools/exceptions/: BRKeystoreErrorException.java  CertificateChainNotFound.java  PaymentRequestExpiredException.java
app/src/main/java/com/bhash/tools/listeners/: RecyclerItemClickListener.java  SyncReceiver.java
app/src/main/java/com/bhash/tools/manager/: BRApiManager.java  BRClipboardManager.java  BREventManager.java  BRNotificationManager.java  BRReportsManager.java  BRSharedPrefs.java  FontManager.java  InternetManager.java  PromptManager.java  SendManager.java  SyncManager.java  TxManager.java
app/src/main/java/com/bhash/tools/qrcode/: QRCodeReaderView.java  QRToViewPointTransformer.java  QRUtils.java
app/src/main/java/com/bhash/tools/security/: AuthManager.java  BRKeyStore.java  FingerprintUiHelper.java  PostAuth.java  RootHelper.java  SmartValidator.java  X509CertificateValidator.java
app/src/main/java/com/bhash/tools/sqlite/: BRDataSourceInterface.java  BRSQLiteHelper.java  BtcBchTransactionDataStore.java  CurrencyDataSource.java  MerkleBlockDataSource.java  PeerDataSource.java  TransactionStorageManager.java
app/src/main/java/com/bhash/tools/threads/: ImportPrivKeyTask.java  PaymentProtocolPostPaymentTask.java  PaymentProtocolTask.java
app/src/main/java/com/bhash/wallet/: WalletsMaster.java
app/src/main/java/com/platform/: APIClient.java  BRGeoWebSocketHandler.java  BRHTTPHelper.java  GeoLocationManager.java  HTTPServer.java
app/src/main/java/com/platform/entities/: TxMetaData.java  WalletInfo.java
app/src/main/java/com/platform/interfaces/: KVStoreAdaptor.java  Middleware.java  Plugin.java
app/src/main/java/com/platform/kvstore/: CompletionObject.java  RemoteKVStore.java  ReplicatedKVStore.java
app/src/main/java/com/platform/middlewares/: APIProxy.java  HTTPFileMiddleware.java  HTTPIndexMiddleware.java  HTTPRouter.java
app/src/main/java/com/platform/sqlite/: KVItem.java  PlatformSqliteHelper.java
app/src/main/java/com/platform/tools/: BRBitId.java  KVStoreManager.java
app/src/main/jni/: bulwark-core
app/src/main/res/layout/: activity_about.xml  activity_advanced.xml  activity_bread.xml  activity_camera.xml  activity_currency_settings.xml  activity_disabled.xml  activity_display_currency.xml  activity_fingerprint.xml  activity_home.xml  activity_import.xml  activity_input_words.xml  activity_intro.xml  activity_intro_recover.xml  activity_nodes.xml  activity_notification.xml  activity_paper_key.xml  activity_paper_key_prove.xml  activity_pin.xml  activity_pin_template.xml  activity_qr.xml  activity_restore.xml  activity_security_center.xml  activity_settings.xml  activity_share_data.xml  activity_spend_limit.xml  activity_sync_blockchain.xml  activity_wallet.xml  activity_web_view.xml  activity_write_down.xml  bread_alert_dialog.xml  bread_spinner_item.xml  currency_list_item.xml  dialog_bch_welcome.xml  fingerprint_dialog_container.xml  fragment_bread_pin.xml  fragment_greetings.xml  fragment_manage.xml  fragment_menu.xml  fragment_receive.xml  fragment_send.xml  (+18 more)
app/src/main/res/values/: strings.xml  values.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/: PaperKeyTests.java
(+73 files in other folders)
